# straminata

./: .gitignore  .travis.yml  README.md  dataLevel.txt  stack.yaml  straminata.cabal
app/: Main.hs
level/: level1.lvl  level2.lvl  level3.lvl  level4.lvl
src/: Controls.hs  Generator.hs  Straminata.hs  WindowConstants.hs
src/Model/: CommonTypes.hs  LevelPatterns.hs  Levels.hs  Map.hs  Objects.hs
src/Util/: Common.hs  Constants.hs  Controls.hs
src/Visual/: Renderer.hs  TextureLoader.hs  WindowConstants.hs
test/: Spec.hs
