name:                straminata
version:             0.1
-- synopsis:
-- description:
homepage: https://github.com/cmc-haskell-2018/straminata
-- license:
-- license-file:
author:              Команда №1 (Team #1)
maintainer:          alois9866@gmail.com
copyright:           2017 Team #1
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:
    Straminata, WindowConstants, Model.CommonTypes, Util.Common
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable straminata
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , straminata
                     , gloss
  default-language:    Haskell2010

test-suite straminata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , straminata
                     , gloss
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

